--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,16 +1,51 @@
 <section class="vh-100 bg-secondary">
- <div class="container py-5 h-100">
+  <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
-        <div class="col-12">
-            <div class="card rounded-3">
-                <div class="card-body p-4">
-                    <h4 class="text-center">To Do App</h4>
+      <div class="col-12 col-lg-9 col-xl-7">
+        <div class="card rounded-3">
+          <div class="card-body p-4">
+
+            <h4 class="text-center my-3 pb-3">To Do App</h4>
+
+            <form class="row g-3 justify-content-center align-items-center mb-4 pb-2" [formGroup]="todoForm" (ngSubmit)="addTask()">
+              <div class="col-12 col-md-auto">
+                <div class="form-floating">
+                  <input type="text" class="form-control" placeholder="Enter a task here" formControlName="title" />
+                  <label>Enter a task here</label>
                 </div>
-            </div>
+              </div>
 
+              <div class="col-12 col-md-auto"> <button type="submit" class="btn btn-primary">Save</button>
+              </div>
+
+              <div class="col-12 col-md-auto"> <button type="button" class="btn btn-warning">Get tasks</button>
+              </div>
+            </form>
+
+            <table class="table mb-4">
+              <thead>
+                <tr>
+                  <th scope="col">No.</th>
+                  <th scope="col">Todo item</th>
+                  <th scope="col">Status</th>
+                  <th scope="col">Actions</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let task of tasks; let i = index">
+                  <th scope="row">{{i + 1}}</th>
+                  <td>{{task.title}}</td>
+                  <td>{{task.status}}</td>
+                  <td>
+                    <button type="submit" class="btn btn-danger">Delete</button>
+                    <button type="submit" class="btn btn-success ms-1">Finished</button>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
-
+      </div>
     </div>
- </div>
-
+  </div>
 </section>
