--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -37,8 +37,15 @@
                   <td>{{task.title}}</td>
                   <td>{{task.status}}</td>
                   <td>
-                    <button type="submit" class="btn btn-danger">Delete</button>
-                    <button type="submit" class="btn btn-success ms-1">Finished</button>
+                    <button type="button" class="btn btn-danger">
+                      <i class="bi bi-trash"></i>
+                    </button>
+                    <button type="button" class="btn btn-success ms-1">
+                      <i class="bi bi-check-lg"></i>
+                    </button>
+                    <button type="button" class="btn btn-warning ms-1">
+                      <i class="bi bi-pencil"></i>
+                    </button>
                   </td>
                 </tr>
               </tbody>
