--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,7 +7,8 @@
 
             <h4 class="text-center my-3 pb-3">To Do App</h4>
 
-            <form class="row g-3 justify-content-center align-items-center mb-4 pb-2" [formGroup]="todoForm" (ngSubmit)="addTask()">
+            <form class="row g-3 justify-content-center align-items-center mb-4 pb-2" [formGroup]="todoForm"
+             (ngSubmit)="isEditing ? editTask() : addTask()">
               <div class="col-12 col-md-auto">
                 <div class="form-floating">
                   <input type="text" class="form-control" placeholder="Enter a task here" formControlName="title" />
@@ -15,7 +16,9 @@
                 </div>
               </div>
 
-              <div class="col-12 col-md-auto"> <button type="submit" class="btn btn-primary">Save</button>
+              <div class="col-12 col-md-auto"> <button type="submit" class="btn btn-primary">
+                {{ isEditing ? 'Update Task' : 'Add Task' }}
+              </button>
               </div>
 
               <div class="col-12 col-md-auto"> <button type="button" class="btn btn-warning">Get tasks</button>
@@ -40,10 +43,10 @@
                     <button type="button" class="btn btn-danger">
                       <i class="bi bi-trash"></i>
                     </button>
-                    <button type="button" class="btn btn-success ms-1">
+                    <button type="button" class="btn btn-success ms-1" >
                       <i class="bi bi-check-lg"></i>
                     </button>
-                    <button type="button" class="btn btn-warning ms-1">
+                    <button type="button" class="btn btn-warning ms-1" (click)="isEditing = true ; taskIdToEdit = task.id">
                       <i class="bi bi-pencil"></i>
                     </button>
                   </td>
